--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@drawable/blue_back"
     tools:context=".homeScreen.setting.ChangePasswordActivity">
 
     <ImageView
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/ivBack"
         android:text="Change Password"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="@dimen/_30sdp" />
 
@@ -77,7 +77,7 @@
         android:padding="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:text="FORGOT PASSWORD ?"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
 </RelativeLayout>
