--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@drawable/blue_back"
     tools:context=".homeScreen.setting.ContactUsActivity">
 
     <ImageView
@@ -120,7 +120,7 @@
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:text="Send"
                 android:textColor="@color/black"
-                app:backgroundTint="@color/gray" />
+                app:backgroundTint="@color/lightBlue" />
 
         </LinearLayout>
 
