--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightBlue"
+    android:background="@drawable/blue_back"
     tools:context=".homeScreen.createReservation.DetailsActivity">
 
     <ImageView
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_10sdp"
+        android:backgroundTint="@color/blue"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -54,6 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hotel Taj"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_25sdp"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,6 +75,7 @@
                 style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/lightBlue"
                 android:numStars="5"
                 android:rating="4"
                 android:stepSize="1"
@@ -83,19 +86,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:text="Facilities Available"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_15sdp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:background="@color/lightBlue"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgWifi"
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="@dimen/_20sdp"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:src="@drawable/outline_wifi_24" />
 
@@ -122,6 +127,7 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_weight="1"
                 android:text="Ahmedabad"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_20sdp" />
 
             <TextView
@@ -130,6 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="200$/Hour"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_20sdp" />
 
         </LinearLayout>
