--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@drawable/blue_back"
     tools:context=".homeScreen.ProfileActivity">
 
     <ImageView
@@ -24,6 +24,7 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:paddingEnd="@dimen/_5sdp"
         android:text="Edit Profile"
+        android:textColor="@color/black"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
