--- a/app/src/main/res/layout/custom_toast_layout.xml
+++ b/app/src/main/res/layout/custom_toast_layout.xml
@@ -10,7 +10,10 @@
     <ImageView
         android:layout_width="@dimen/_20sdp"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginEnd="0dp"
         android:src="@drawable/logo" />
 
     <TextView
@@ -19,7 +22,7 @@
         android:layout_height="wrap_content"
         android:text="Custom Toast Message"
         android:layout_margin="@dimen/_5sdp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="@dimen/_10ssp" />
 
 </LinearLayout>
