--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/lightBlue"
+    android:background="@color/blue"
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/_5sdp"
     android:paddingVertical="@dimen/_5sdp">
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:gravity="center"
+        android:textColor="@color/white"
         android:text="VERIFY PASSWORD"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold" />
