--- a/app/src/main/res/layout/meeting_rooms_item.xml
+++ b/app/src/main/res/layout/meeting_rooms_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:elevation="@dimen/_5sdp"
         app:cardCornerRadius="@dimen/_10sdp"
+        android:backgroundTint="@color/blue"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -63,6 +64,7 @@
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
                         android:text="Taj Hotel"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_20sdp"
                         android:textStyle="bold" />
 
@@ -73,7 +75,7 @@
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
                         android:text="Ahmedabad"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_18sdp" />
 
                     <TextView
@@ -83,7 +85,7 @@
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
                         android:text="200 $"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_18sdp" />
 
                 </LinearLayout>
@@ -108,6 +110,7 @@
                     <Button
                         android:id="@+id/btnBookNow"
                         style="@style/button"
+                        app:backgroundTint="@color/lightBlue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
