--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -3,20 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_5sdp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/_5sdp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="@dimen/_5sdp"
         app:cardCornerRadius="@dimen/_10sdp"
+        android:backgroundTint="@color/blue"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="vertical"
             android:padding="@dimen/_5sdp">
 
@@ -57,6 +57,7 @@
                         android:layout_weight="1"
                         android:gravity=""
                         android:text="Taj Hotel"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_22sdp"
                         android:textStyle="bold" />
 
@@ -66,10 +67,11 @@
                         android:layout_height="0dp"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:text="Ahmedabad"
                         android:gravity=""
-                        android:textColor="@color/black"
+                        android:text="Ahmedabad"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_16sdp" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -81,9 +83,9 @@
                             android:id="@+id/txtDate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="12/12/23"
                             android:layout_marginHorizontal="@dimen/_10sdp"
-                            android:textColor="@color/black"
+                            android:text="12/12/23"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_13sdp" />
 
                         <TextView
@@ -92,7 +94,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/_10sdp"
                             android:text="14:00 - 15:89"
-                            android:textColor="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_13sdp" />
 
                     </LinearLayout>
@@ -119,6 +121,7 @@
                 <Button
                     android:id="@+id/btnBookAgain"
                     style="@style/button"
+                    app:backgroundTint="@color/lightBlue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_10sdp"
