--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -9,6 +9,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_1sdp"
+        android:backgroundTint="@color/blue"
         android:elevation="@dimen/_5sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
@@ -17,7 +19,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="vertical"
             android:padding="@dimen/_5sdp">
 
@@ -58,6 +59,7 @@
                         android:layout_weight="1"
                         android:gravity=""
                         android:text="Taj Hotel"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_20sdp"
                         android:textStyle="bold" />
 
@@ -69,7 +71,7 @@
                         android:layout_weight="1"
                         android:gravity=""
                         android:text="Ahmedabad"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_18sdp" />
 
                     <TextView
@@ -80,8 +82,8 @@
                         android:layout_weight="1"
                         android:gravity=""
                         android:text="200$"
-                        android:textSize="@dimen/_20sdp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_20sdp" />
 
                 </LinearLayout>
 
@@ -91,6 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -99,18 +102,18 @@
                     android:id="@+id/txtDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12/12/23"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:textColor="@color/black"
+                    android:text="12/12/23"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_15sdp" />
 
                 <TextView
                     android:id="@+id/txtTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="14:00:00 - 12:00:00"
                     android:layout_marginStart="@dimen/_5sdp"
-                    android:textColor="@color/black"
+                    android:text="14:00:00 - 12:00:00"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_15sdp" />
 
             </LinearLayout>
