--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,7 +33,7 @@
     </style>
 
     <style name="RatingBar" parent="Theme.AppCompat">
-        <item name="colorControlNormal">@color/gray</item>
+        <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/darkBlue</item>
     </style>
 </resources>
