--- a/app/src/main/res/layout/activity_rate_us.xml
+++ b/app/src/main/res/layout/activity_rate_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/blue_back"
+    android:background="@color/lightBlue"
     tools:context=".homeScreen.setting.RateUsActivity">
 
     <ImageView
@@ -19,9 +19,9 @@
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_200sdp"
-        android:layout_marginTop="@dimen/_60sdp"
+        android:layout_width="@dimen/_250sdp"
+        android:layout_height="@dimen/_250sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:src="@drawable/bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +35,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/_30sdp"
         android:textStyle="bold"
+        android:layout_marginTop="-30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgLogo" />
@@ -71,6 +72,7 @@
         android:textSize="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@id/txtRating"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Submit"
         style="@style/button"/>
