--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/blue_back"
+    android:background="@color/lightBlue"
     tools:context=".homeScreen.setting.SecurityActivity">
 
     <ImageView
