--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.createReservation.DetailsActivity">
+    tools:context=".activity.homeScreen.mainScreen.create.DetailsActivity">
 
     <ImageView
         android:id="@+id/ivBack"
