--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".entryModule.SignUpActivity">
+    tools:context=".activity.entryModule.SignUpActivity">
 
     <ImageView
         android:layout_width="match_parent"
