--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.setting.ChangePasswordActivity">
+    tools:context=".activity.homeScreen.settings.security.ChangePasswordActivity">
 
     <ImageView
         android:id="@+id/ivBack"
