--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.setting.ContactUsActivity">
+    tools:context=".activity.homeScreen.mainScreen.ContactUsActivity">
 
     <ImageView
         android:id="@+id/ivBack"
