--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.createReservation.CreateReservationActivity">
+    tools:context=".activity.homeScreen.mainScreen.create.CreateReservationActivity">
 
     <EditText
         android:id="@+id/etvSearch"
