--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightBlue"
-    tools:context=".homeScreen.setting.FaqActivity">
+    tools:context=".activity.homeScreen.settings.FaqActivity">
 
     <ScrollView
         android:layout_width="match_parent"
