--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightBlue"
-    tools:context=".homeScreen.setting.ForgotPasswordActivity">
+    tools:context=".activity.homeScreen.settings.security.ForgotPasswordActivity">
 
     <ImageView
         android:id="@+id/ivBack"
