--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
     android:orientation="vertical"
-    tools:context=".homeScreen.HomeScreenActivity">
+    tools:context=".activity.homeScreen.HomeScreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -438,7 +438,7 @@
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:gravity="center_horizontal"
-                        android:text="Security"
+                        android:text="Settings"
                         android:textSize="@dimen/_15sdp"
                         app:backgroundTint="@color/gray" />
                 </LinearLayout>
