--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.createReservation.PaymentActivity">
+    tools:context=".activity.homeScreen.mainScreen.create.PaymentActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
