--- a/app/src/main/res/layout/activity_previous_meeting.xml
+++ b/app/src/main/res/layout/activity_previous_meeting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.previousMeeting.PreviousMeetingActivity">
+    tools:context=".activity.homeScreen.mainScreen.PreviousMeetingActivity">
 
     <EditText
         android:id="@+id/etvSearch"
