--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.ProfileActivity">
+    tools:context=".activity.homeScreen.mainScreen.profile.ProfileActivity">
 
     <ImageView
         android:id="@+id/ivBack"
