--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@drawable/gradient"
-    tools:context=".entryModule.SplashScreenActivity">
+    tools:context=".activity.entryModule.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/imgLogo"
