--- a/app/src/main/res/layout/activity_up_coming_meeting.xml
+++ b/app/src/main/res/layout/activity_up_coming_meeting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
-    tools:context=".homeScreen.upComingMeeting.UpComingMeetingActivity">
+    tools:context=".activity.homeScreen.mainScreen.UpComingMeetingActivity">
     <EditText
         android:id="@+id/etvSearch"
         style="@style/edittext"
