--- a/app/src/main/res/layout/fragment_date_picker_fargment.xml
+++ b/app/src/main/res/layout/fragment_date_picker_fargment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".homeScreen.createReservation.DatePickerFragment">
+    tools:context=".fragment.DatePickerFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
