--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,7 +35,9 @@
         android:id="@+id/cvEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:backgroundTint="@color/darkBlue"
         android:elevation="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardUseCompatPadding="true"
@@ -48,7 +50,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/darkBlue"
             android:orientation="vertical"
             android:padding="@dimen/_10sdp">
 
@@ -90,6 +91,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
+                android:drawableStart="@drawable/baseline_person_24"
+                android:drawablePadding="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_30sdp"
                 android:layout_marginEnd="0dp"
                 android:hint="FULL NAME"
@@ -106,6 +109,8 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:hint="PHONE NUMBER"
+                android:drawableStart="@drawable/baseline_call_24"
+                android:drawablePadding="@dimen/_10sdp"
                 android:imeOptions="actionNext"
                 android:inputType="number"
                 android:maxLength="10"
@@ -123,6 +128,8 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
+                android:drawableStart="@drawable/baseline_email_24"
+                android:drawablePadding="@dimen/_10sdp"
                 android:hint="abc@gmail.com"
                 android:imeOptions="actionDone"
                 android:inputType="textEmailAddress"
