--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="gray">#D5D0D0</color>
     <color name="red">#EF0606</color>
     <color name="brown">#C37E41</color>
+    <color name="yellow">#F4D501</color>
     <color name="mintGreen">#47B69F</color>
     <color name="orange">#FF5722</color>
     <color name="darkBlue">#122F7C</color>
