--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -119,7 +119,7 @@
             android:paddingEnd="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
@@ -134,7 +134,7 @@
             android:maxLength="1"
             android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
@@ -143,7 +143,7 @@
             style="@style/edittext"
             android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:maxLength="1"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
@@ -164,7 +164,7 @@
             android:maxLength="1"
             android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
@@ -179,7 +179,7 @@
             android:maxLength="1"
             android:layout_marginTop="0dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="@dimen/_5sdp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
