--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/blue_back"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".activity.homeScreen.HomeScreenActivity">
 
@@ -370,7 +370,7 @@
                         android:layout_height="@dimen/_30sdp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="@dimen/_10sdp"
-                        android:src="@drawable/img_favorite" />
+                        android:src="@drawable/baseline_favorite_white_border_24" />
 
                     <TextView
                         android:layout_width="match_parent"
