--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -58,12 +58,15 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
+            style="@style/RatingBar"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_10sdp"
             android:numStars="5"
             android:rating="0"
-            android:stepSize="1" />
+            android:stepSize="1"
+            android:isIndicator="false" />
 
         <LinearLayout
             android:layout_width="match_parent"
