--- a/app/src/main/res/layout/meeting_rooms_item.xml
+++ b/app/src/main/res/layout/meeting_rooms_item.xml
@@ -101,11 +101,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleIndicator"
+                        style="@style/RatingBar"
                         android:rating="4"
                         android:numStars="5"
-                        android:stepSize="1"
-                        android:theme="@style/RatingBar"/>
+                        android:stepSize="1"/>
 
                     <Button
                         android:id="@+id/btnBookNow"
