--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -110,7 +110,7 @@
 
                 <RatingBar
                     android:id="@+id/ratingBar"
-                    style="?android:attr/ratingBarStyleIndicator"
+                    style="@style/RatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
