--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -21,7 +21,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/_5sdp">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,7 +71,7 @@
                         android:gravity=""
                         android:text="Ahmedabad"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_16sdp" />
 
                     <TextView
                         android:id="@+id/txtPrice"
@@ -87,38 +86,18 @@
 
                 </LinearLayout>
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            </LinearLayout>
+            <Button
+                android:id="@+id/btnViewInfo"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:id="@+id/txtDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_5sdp"
-                    android:text="12/12/23"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_15sdp" />
-
-                <TextView
-                    android:id="@+id/txtTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:text="14:00:00 - 12:00:00"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_15sdp" />
-
-            </LinearLayout>
-
-
+                android:layout_gravity="end"
+                style="@style/button"
+                android:text="View Info"
+                android:textColor="@color/black"
+                android:padding="0dp"
+                app:backgroundTint="@color/gray"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
