--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -11,7 +11,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivSetting"
             android:layout_width="@dimen/_25sdp"
@@ -30,13 +32,13 @@
             android:id="@+id/txtHelloName"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_25sdp"
+            android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_15sdp"
             android:ellipsize="marquee"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:hint="Hello, Anand"
             android:gravity="end"
-            android:layout_marginStart="@dimen/_20sdp"
+            android:hint="Hello, Anand"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:textColor="@color/white"
@@ -348,9 +350,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:ellipsize="marquee"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:gravity="center_horizontal"
                     android:hint="anandkasodiya7007@gmail.com"
-                    android:textSize="@dimen/_10sdp" />
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:singleLine="true"
+                    android:textSize="@dimen/_15sdp" />
 
                 <View
                     android:layout_width="match_parent"
