--- a/app/src/main/res/layout/activity_up_coming_meeting.xml
+++ b/app/src/main/res/layout/activity_up_coming_meeting.xml
@@ -26,6 +26,8 @@
         android:layout_marginStart="@dimen/_60sdp"
         android:drawablePadding="@dimen/_5sdp"
         android:hint="search"
+        android:imeOptions="actionDone"
+        android:inputType="textAutoComplete"
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_30sdp"
         android:singleLine="true"
