--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -24,9 +24,10 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
+            android:gravity="center"
             android:text="Price Range"
             android:textColor="@color/black"
             android:textSize="@dimen/_20sdp" />
@@ -42,16 +43,18 @@
 
         <TextView
             android:id="@+id/txtSelectedRange"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="0"
             android:textColor="@color/black"
             android:textSize="@dimen/_20sdp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
+            android:gravity="center"
             android:text="Rating"
             android:textColor="@color/black"
             android:textSize="@dimen/_20sdp" />
@@ -59,24 +62,28 @@
         <RatingBar
             android:id="@+id/ratingBar"
             style="@style/RatingBar"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/_10sdp"
+            android:isIndicator="false"
             android:numStars="5"
-            android:rating="0"
-            android:stepSize="1"
-            android:isIndicator="false" />
+            android:rating="1"
+            android:stepSize="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp">
 
             <Button
                 android:id="@+id/btnReset"
                 style="@style/button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_weight="1"
                 android:text="Reset" />
 
@@ -85,10 +92,14 @@
                 style="@style/button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
                 android:layout_weight="1"
                 android:text="Apply" />
 
         </LinearLayout>
 
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
