--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="@dimen/_60sdp"
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="@dimen/_5sdp"
-        android:hint="search"
+        android:hint="Search For Room Names"
         android:imeOptions="actionDone"
         android:inputType="textAutoComplete"
         android:paddingStart="@dimen/_10sdp"
