--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -22,32 +22,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="2">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="@dimen/_20sdp"
             android:layout_weight="1">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
+
                 <View
                     android:layout_width="@dimen/_10sdp"
                     android:layout_height="match_parent"
-                    android:background="@color/blue"/>
+                    android:background="@color/blue" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
+
                 <View
                     android:layout_width="@dimen/_10sdp"
                     android:layout_height="match_parent"
-                    android:background="@color/blue"/>
+                    android:background="@color/blue" />
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -60,71 +66,80 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:backgroundTint="@color/white"
+        android:elevation="@dimen/_10sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:elevation="@dimen/_10sdp"
-        android:backgroundTint="#D3D8DC"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginHorizontal="@dimen/_20sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1">
-                    <ImageView
-                        android:layout_width="@dimen/_12sdp"
-                        android:layout_height="@dimen/_12sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
-                        android:src="@drawable/ic_nutt"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="center">
 
                     <ImageView
                         android:layout_width="@dimen/_12sdp"
                         android:layout_height="@dimen/_12sdp"
                         android:layout_marginTop="@dimen/_2sdp"
-                        android:src="@drawable/ic_nutt"/>
+                        android:src="@drawable/ic_nut" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:src="@drawable/ic_nut" />
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="@dimen/_30sdp"
                     android:layout_height="@dimen/_30sdp"
-                    android:src="@drawable/bill_img"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_marginStart="@dimen/_10sdp"/>
+                    android:src="@drawable/bill_img" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Bill Summary"
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="Bill Summary"
                     android:textSize="@dimen/_15sdp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:backgroundTint="@color/darkBlue"
+                android:elevation="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_10sdp"
                 app:cardUseCompatPadding="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,8 +163,8 @@
                             android:layout_weight="1"
                             android:paddingStart="@dimen/_10sdp"
                             android:text="Room Name"
-                            android:textSize="@dimen/_16sdp"
                             android:textColor="@color/white"
+                            android:textSize="@dimen/_16sdp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -157,10 +172,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="Hotel Taj"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
@@ -174,9 +189,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
                             android:text="Location"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_16sdp"
                             android:textStyle="bold" />
 
@@ -185,10 +200,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="Ahmedabad"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
@@ -202,9 +217,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
                             android:text="Price"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_16sdp"
                             android:textStyle="bold" />
 
@@ -213,10 +228,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="2000"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
@@ -230,9 +245,9 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
                             android:text="Date"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_16sdp"
                             android:textStyle="bold" />
 
@@ -241,10 +256,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="10-06-24"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
@@ -259,20 +274,20 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:paddingStart="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:text="Time"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_16sdp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/txtTimeSlot"
                             android:layout_width="0dp"
-                            android:textColor="@color/white"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="11:00 - 13:00"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
@@ -297,16 +312,17 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:paddingEnd="@dimen/_10sdp"
-                            android:textColor="@color/white"
                             android:paddingStart="@dimen/_10sdp"
+                            android:paddingEnd="@dimen/_10sdp"
                             android:text="4000"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_15sdp" />
 
                     </LinearLayout>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+
             <Button
                 android:id="@+id/btnPay"
                 style="@style/button"
