--- a/app/src/main/res/layout/meeting_rooms_item.xml
+++ b/app/src/main/res/layout/meeting_rooms_item.xml
@@ -9,9 +9,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue"
         android:elevation="@dimen/_5sdp"
         app:cardCornerRadius="@dimen/_10sdp"
-        android:backgroundTint="@color/blue"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -41,13 +41,6 @@
                         android:scaleType="fitXY"
                         android:src="@drawable/back_ground_image" />
 
-                    <ImageView
-                        android:id="@+id/imgFavourite"
-                        android:layout_width="@dimen/_30sdp"
-                        android:layout_height="@dimen/_30sdp"
-                        android:layout_margin="@dimen/_5sdp"
-                        android:src="@drawable/baseline_favorite_border_24"/>
-
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -57,16 +50,29 @@
                     android:layout_weight="1.3"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txtName"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:text="Taj Hotel"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_20sdp"
-                        android:textStyle="bold" />
+                        android:layout_marginHorizontal="@dimen/_10sdp">
+
+                        <TextView
+                            android:id="@+id/txtName"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:text="Taj Hotel"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_20sdp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/imgFavourite"
+                            android:layout_width="@dimen/_40sdp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/baseline_favorite_white_border_24" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/txtLocation"
@@ -96,26 +102,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                    <RatingBar
-                        android:id="@+id/ratingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        style="@style/RatingBar"
-                        android:rating="4"
-                        android:numStars="5"
-                        android:stepSize="1"/>
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="@style/RatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:numStars="5"
+                    android:rating="4"
+                    android:stepSize="1" />
 
-                    <Button
-                        android:id="@+id/btnBookNow"
-                        style="@style/button"
-                        app:backgroundTint="@color/lightBlue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:text="BOOK NOW"
-                        android:textSize="@dimen/_10sdp" />
+                <Button
+                    android:id="@+id/btnBookNow"
+                    style="@style/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:text="BOOK NOW"
+                    android:textSize="@dimen/_10sdp"
+                    app:backgroundTint="@color/lightBlue" />
 
             </LinearLayout>
 
