--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/_5sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,18 +87,19 @@
 
                 </LinearLayout>
 
-
             </LinearLayout>
+
             <Button
                 android:id="@+id/btnViewInfo"
-                android:layout_width="wrap_content"
+                style="@style/button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                style="@style/button"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:padding="0dp"
                 android:text="View Info"
                 android:textColor="@color/black"
-                android:padding="0dp"
-                app:backgroundTint="@color/gray"/>
+                app:backgroundTint="@color/lightBlue" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
