--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightBlue"
+    android:background="@color/lightBlueTransparent"
     tools:context=".activity.homeScreen.settings.FaqActivity">
 
     <ImageView
@@ -21,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_50sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:paddingVertical="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +79,8 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
-                        android:textSize="@dimen/_15ssp"
                         android:textColor="@color/black"
+                        android:textSize="@dimen/_15ssp"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -131,8 +132,8 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
-                        android:textSize="@dimen/_15ssp"
                         android:textColor="@color/black"
+                        android:textSize="@dimen/_15ssp"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -165,8 +166,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:textColor="@color/white"
                             android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_20ssp" />
 
                         <ImageView
@@ -184,8 +185,8 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
-                        android:textSize="@dimen/_15ssp"
                         android:textColor="@color/black"
+                        android:textSize="@dimen/_15ssp"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -237,8 +238,8 @@
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
-                        android:textSize="@dimen/_15ssp"
                         android:textColor="@color/black"
+                        android:textSize="@dimen/_15ssp"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -255,9 +256,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:text="Contact Us"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
