--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -99,7 +99,7 @@
                 android:padding="0dp"
                 android:text="View Info"
                 android:textColor="@color/black"
-                app:backgroundTint="@color/lightBlue" />
+                app:backgroundTint="@color/lightBlueTransparent" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
