--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/lightBlue"
+        android:startColor="@color/lightBlueTransparent"
         android:endColor="@color/white"
         android:angle="270" />
 </shape>
