--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account_signup"
-            android:textColor="@color/lightBlue"
+            android:textColor="@color/lightBlueTransparent"
             android:textStyle="bold" />
 
     </LinearLayout>
