--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightBlue"
+    android:background="@color/lightBlueTransparent"
     tools:context=".activity.homeScreen.settings.security.SecurityActivity">
 
     <ImageView
@@ -54,7 +54,7 @@
             android:id="@+id/switchOnOff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/lightBlue"
+            android:background="@color/lightBlueTransparent"
             android:layout_marginVertical="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +91,7 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:paddingStart="@dimen/_5sdp"
-            android:background="@color/lightBlue"
+            android:background="@color/lightBlueTransparent"
             android:src="@drawable/ic_right_arrow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
