--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -125,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/account_login"
-            android:textColor="@color/lightBlue"
+            android:textColor="@color/lightBlueTransparent"
             android:textStyle="bold" />
 
     </LinearLayout>
